Task 5 -> User Login -> api/login

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@ DB_USER=root
 DB_PASSWORD=manager
 DB_NAME=banking_app
 PORT=5000
+
+JWT_SECRET=09824ru0jf42jj40u20jmybankingsecret395sdio9u3j0u03490jf9f09
